--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>My app title </title>
     </head>
     <body>
-        this is my app !
+        this is my app 
     </body>
 </html>
